<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.trianaandaluciaprietogalvan.helloworldsupport.Grafica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:src="@drawable/frecuencia_cardiaca"/>
            <TextView
                android:id="@+id/txtFrecuencia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:textSize="18dp"
                android:visibility="visible"
                android:textStyle="bold"
                />
            <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/empezar_ecg"
            android:layout_marginTop="2dp"
            android:id="@+id/buttonEmpezar"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            android:onClick="startService"
            android:background="@color/colorAccent"
            android:textColor="@color/iconsText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/capturar"
                android:layout_marginTop="2dp"
                android:id="@+id/buttonCapturar"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:onClick="startServiceCapturar"
                android:background="@color/colorAccent"
                android:textColor="@color/iconsText" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/detener_ecg"
                android:layout_marginTop="2dp"
                android:id="@+id/buttonDetener"
                android:textStyle="bold"
                android:onClick="stopService"
                android:background="@color/colorAccent"
                android:textColor="@color/iconsText" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/senal_cardiaca">
        </com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
